tests/NormalTests/paczka1/small_fuzzy/85653438.err
Error in line 2: f1MqMKY8U1Z S347 19,2
Error in line 10: ypj85UR S915 77,1
